fixed image and fixed content align issues

--- a/assignment/nChannel/cnicho14/stylesheet.css
+++ b/assignment/nChannel/cnicho14/stylesheet.css
@@ -51,7 +51,7 @@ li {
 
 .div1 {
   padding-top: 120px;
-  height: 600px;
+  height: 580px;
   vertical-align: baseline;
   width: 100%;
   background-color: #9cdcf2;
@@ -113,8 +113,7 @@ h2 {
 }
 
 #p1 {
-  width: 50%;
-  padding-left: 225px;
+  padding-left: 100px;
   line-height: 22pt;
   font-size: 20px;
   word-break: break-all;
@@ -122,8 +121,8 @@ h2 {
 }
 
 .bottomContent {
-  top: -12px;
-  left: -105px;
+  top: 0px;
+  left: -115px;
   padding-top: 30px;
   position: relative;
   height: 285px;
@@ -198,4 +197,11 @@ h2 {
 #li5,
 #li6 {
   font-size: 17px;
+}
+
+.buttonholder {
+  width: 100%;
+  position: absolute;
+  height: 36px;
+  bottom: -36px;
 }
